--- a/app/views/objectives/new.html.erb
+++ b/app/views/objectives/new.html.erb
@@ -1,2 +1,19 @@
 <h1>Objectives#new</h1>
-<p>Find me in app/views/objectives/new.html.erb</p>
+
+<%= form_for(@objective) do |f| %>
+  <div class="field">
+    <%= f.label :name %><br />
+    <%= f.text_field :name %>
+  </div>
+  <div class="field">
+    <%= f.label :description %><br />
+    <%= f.text_area :description %>
+  </div>
+  <div class="field">
+    <%= f.label :order %><br />
+    <%= f.text_field :order %>
+  </div>
+  <div class="actions">
+    <%= f.submit "Create" %>
+  </div>
+<% end %>
