--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,11 +1,15 @@
 <header>
-  <%#= image_tag("logo.png", :alt => "Sample App", :class => "round") %>
   <span class="title">Lift</span>
   <nav class="round">
     <ul>
+      <li><%= "Hello, #{current_user.name}" if signed_in? %></li>
       <li><%= link_to "Home", root_path %></li>
       <li><%= link_to "Help", '#' %></li>
-      <li><%= link_to "Sign in", '#' %></li>
+      <% if signed_in? %>
+        <li><%= link_to "Sign out", signout_path, :method => :delete %></li>
+      <% else %>
+        <li><%= link_to "Sign in", signin_path %></li>
+      <% end %>
     </ul>
   </nav>
 </header>
