tagの実装をacts_as_tagging_onに変更

--- a/app/views/objectives/new.html.erb
+++ b/app/views/objectives/new.html.erb
@@ -13,6 +13,10 @@
     <%= f.label :order %><br />
     <%= f.text_field :order %>
   </div>
+  <div class="field">
+    <%= f.label :tag_list %><br />
+    <%= f.text_field :tag_list %>
+  </div>
   <div class="actions">
     <%= f.submit "Create" %>
   </div>
