目標更新機能を実装

--- a/app/views/objectives/_objective.html.erb
+++ b/app/views/objectives/_objective.html.erb
@@ -1,6 +1,6 @@
 <tr>
   <td class="objective">
-    <span class="content"><%= objective.name %></span>
+    <%= link_to objective.name, edit_objective_path(objective) %>
     <span class="timestamp">
       Posted <%= time_ago_in_words(objective.created_at) %> ago.
     </span>
