--- a/app/views/objectives/edit.html.erb
+++ b/app/views/objectives/edit.html.erb
@@ -3,6 +3,6 @@
 <%= form_for(@objective) do |@f| %>
   <%= render 'form' %>
   <div class="actions">
-    <%= @f.submit "Create" %>
+    <%= @f.submit "Update" %>
   </div>
 <% end %>
